<resources>
    <string name="app_name">Shelter4u</string>
    <string name="create_new_account">create new account</string>
    <string name="register">Register</string>
    <string name="not_register_Click_here">not register ? Click here</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
...
