<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainAdminActivity">

    <TextView
        android:id="@+id/SirenlistText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Siren list"
        android:textColor="#0B0808"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <ImageView
        android:id="@+id/EmergencyNumber"
        android:layout_width="114dp"
        android:layout_height="94dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522"
        app:srcCompat="@drawable/emergency" />

    <ImageView
        android:id="@+id/Shelterlist"
        android:layout_width="101dp"
        android:layout_height="84dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049"
        app:srcCompat="@drawable/list" />

    <ImageView
        android:id="@+id/MapOption"
        android:layout_width="101dp"
        android:layout_height="86dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291"
        app:srcCompat="@drawable/map" />

    <ImageView
        android:id="@+id/ContantUs"
        android:layout_width="106dp"
        android:layout_height="93dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765"
        app:srcCompat="@drawable/message" />

    <ImageView
        android:id="@+id/RateUs"
        android:layout_width="103dp"
        android:layout_height="94dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522"
        app:srcCompat="@drawable/rate" />

    <ImageView
        android:id="@+id/EditUserAdmin"
        android:layout_width="102dp"
        android:layout_height="93dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.799"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294"
        app:srcCompat="@drawable/useredit" />

    <TextView
        android:id="@+id/ShelterlistText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Shelter list"
        android:textColor="#0B0808"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/MapOptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Map"
        android:textColor="#1B1010"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391" />

    <TextView
        android:id="@+id/edituserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit user"
        android:textColor="#0C0909"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394" />

    <TextView
        android:id="@+id/EmergencyNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Emergency numbers"
        android:textColor="#120B0B"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613" />

    <TextView
        android:id="@+id/RateUsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rate us"
        android:textColor="#070404"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613" />

    <TextView
        android:id="@+id/ContantUsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contant us"
        android:textColor="#090606"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816" />

    <TextView
        android:id="@+id/changePass"
        android:layout_width="335dp"
        android:layout_height="29dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:clickable="true"
        android:text="Want to Change Password? click here"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

    <ImageView
        android:id="@+id/Sirenlist"
        android:layout_width="93dp"
        android:layout_height="94dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        app:srcCompat="@drawable/siren" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="87dp"
        android:layout_height="18dp"
        android:text="Admin User"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

</androidx.constraintlayout.widget.ConstraintLayout>